CHANGELOG FOR ATOMSK
====================


Master (development)
--------------------
- fixed a bug when reading PWscf input files (*.pw). Thanks to Dongho Nguimdo Moise, AIMS, Cameroon, for pointing out this bug.
- removed error message from "ls" command that appeared when writing PWscf files (*.pw), when no suitable pseudopotential file was found.


Beta 0.10.1 (14 May 2018)
-------------------------
- in mode "--create", added possibility to create the C14 Laves lattice. Thanks to Julien Guénolé, IPMP, RWTH Aachen, Germany, for implementing this feature.
- fixed a bug when creating wurtzite lattice with mode "--create". Thanks to Justin Ondry, UC Berkeley, USA, for pointing out this bug.
- fixed a bug in the writing of JEMS files. Thanks to Tara Boland, Arizona State University, USA, for pointing out this bug and providing a fix.


Beta 0.10 (24 April 2018)
-------------------------
- some modules were split into smaller ones, making current version incompatible with previous branches.
- added support for reading and writing files in PDFFIT structure file format (*.str or *.stru).
- new option "-orthogonal-cell" allows to find a suitable equivalent orthorhombic cell for any type of system.
- in mode "--create", added possibility to orient hexagonal lattices. For cubic lattices, if vectors of provided orientation are not orthogonal, a suggestion is now displayed.
- in mode "--polycrystal", when using the keyword "random", the positions and grain orientations are written into a text parameter file, that can be used to reproduce the polycrystal later. Also, the positions of nodes for Voronoi construction, and the positions of the grains centers of mass, are written into two separate XSF files for visualisation.
- in option "-dislocation", added possibility to construct dislocation loops. Thanks to Emmanuel Clouet, CEA, Gif-sur-Yvette, France, for sharing his code Babel for the construction of dislocation loops.