@@ -6,6 +6,7 @@ Master (development)
 --------------------
 - fixed a bug when reading PWscf input files (*.pw). Thanks to Dongho Nguimdo Moise, AIMS, Cameroon, for pointing out this bug.
 - removed error message from "ls" command that appeared when writing PWscf files (*.pw), when no suitable pseudopotential file was found.
+- added status checks in some memory allocations to avoid OS error "cannot allocate memory". Now Atomsk will display an error message and exit smoothly.
 
 
 Beta 0.10.1 (14 May 2018)
